--- a/aps_plugins/templates/testimonial.html
+++ b/aps_plugins/templates/testimonial.html
@@ -11,6 +11,8 @@
                          height="{{ thumb.height }}"/>
 
                 {% endif %}
+                {#                <img src="assets/images/testimonial/mitech-testimonial-avata-02-90x90.jpg"#}
+                {#                     class="img-fluid" alt="">#}
             </div>
 
             <div class="testimonial-slider__author">
