--- a/aps_shared_farm/templates/home.html
+++ b/aps_shared_farm/templates/home.html
@@ -385,7 +385,7 @@
                 {% endplaceholder %}
                 <div class="d-flex justify-content-center">
                     <div class="section-under-heading text-center section-space--mt_60 section-space--pt_30">
-                        To learn more about every step of the farming process. <a href="{% page_url "technology" %}">Read
+                        To learn more about our Technology. <a href="{% page_url "technology" %}">Read
                         more!</a></div>
                 </div>
             </div>
