--- a/aps_shared_farm/templates/technology.html
+++ b/aps_shared_farm/templates/technology.html
@@ -142,7 +142,7 @@
         </div>
         <!--=========== About Company Area End ==========-->
         <!--====================  Conact us Section Start ====================-->
-        {% placeholder 'contact_us_tech' or %}
+        {% placeholder 'contact_us' or %}
             <div class="contact-us-section-wrappaer infotechno-contact-us-bg section-space--ptb_120">
                 <div class="container">
                     <div class="row align-items-center">
