--- a/aps_plugins/templates/policy_section.html
+++ b/aps_plugins/templates/policy_section.html
@@ -3,9 +3,9 @@
 
 
 
-<div class="faq-wrapper card faq-wrapper container_fl" style="">
-    <div class ="card-body">
-        <div class="font-size-40 "><span class="text-color-primary"> {{ head }} </span></div>
-        <div class="font-size-20 section-space--pb_10 section-space--pt_20  ">{{ description}}</div>
+<div class="faq-wrapper container_fl" style="">       <!-- Removed card faq-wrapper for removing shadows 23/03/2022 -->
+    <div class ="card-body">    
+        <div class="h2"><span class="text-color-primary"> {{ head }} </span></div>
+        <div class="font-size-20 section-space p-1 ">{{ description}}</div>
     </div>
 </div>
