--- a/aps_plugins/templates/stakeholder_details.html
+++ b/aps_plugins/templates/stakeholder_details.html
@@ -38,10 +38,14 @@
                 </div>
 
                 <div class="pricing-table__footer">
-                    <a class="ht-btn ht-btn-md ht-btn--outline" {% if icon != "bi bi-cash-coin" %} target="_blank" {% endif %} href="{% if icon == "bi bi-cash-coin" %} {% url 'sharedfarm:index' %} {% elif icon == "bi bi-people" %}
-    https://pranisheba.com.bd/eng {% else %}https://pranishebashop.com.bd/ {% endif %}">
+                    <a class="ht-btn ht-btn-md ht-btn--outline"
+                            {% if icon != "bi bi-cash-coin" %}
+                       target="_blank" {% endif %}
+
+                       href="{% if icon == "bi bi-cash-coin" %} {% url 'sharedfarm:index' %} {% elif icon == "bi bi-people" %}
+    https://pranisheba.com.bd/eng {% else %}https://pranishebashop.com.bd/{% endif %}">
                         Learn more
-{#                        <i class="far fa-long-arrow-right"></i>#}
+                        {#                        <i class="far fa-long-arrow-right"></i>#}
                     </a>
                 </div>
             </div>
