--- a/aps_shared_farm/templates/base.html
+++ b/aps_shared_farm/templates/base.html
@@ -97,6 +97,7 @@
                                     <!-- Header Social Networks -->
                                     <div class="header-social-networks style-icons">
                                         <div class="inner">
+                                            {% static_placeholder "header_links_socials" or %}
 {#                                            <a class=" social-link hint--black hint--bottom-left" aria-label="Twitter"#}
 {#                                               href="https://twitter.com/" data-hover="Twitter" target="_blank">#}
 {#                                                <i class="social-icon fab fa-twitter"></i>#}
@@ -113,6 +114,7 @@
                                                href="https://www.linkedin.com/company/adorsho-pranisheba-ltd" data-hover="Linkedin" target="_blank">
                                                 <i class="social-icon fab fa-linkedin"></i>
                                             </a>
+                                            {% endstatic_placeholder %}
                                         </div>
                                     </div>
 
@@ -322,40 +324,58 @@
                             <div class="col-lg-2 col-md-4 col-sm-6 footer-widget">
                                 <h6 class="footer-widget__title mb-20">Our Services</h6>
                                 <ul class="footer-widget__list">
-                                    <li><a href="{% url 'sharedfarm:index' %}" class="hover-style-link">For Investors</a></li>
+                                    <li>
+                                        {% if request.user.is_authenticated %}      <!-- NEW, Changed the urls for redirecting logged in Users - 13/03/2022 -->
+                                            <a href="/sharedfarm/#farms" class="hover-style-link">
+                                                For Investors
+                                            </a>
+                                        {% else %}
+                                            <a href="{% url 'sharedfarm:index' %}" class="hover-style-link">
+                                                For Investors
+                                            </a>
+                                        {% endif %}
+                                    </li>
+                                    {% static_placeholder "footer_links_services" or %}
                                     <li><a href="https://pranisheba.com.bd/eng" class="hover-style-link">For Farmers</a></li>
                                     <li><a href="https://pranishebashop.com.bd/" class="hover-style-link">For Customers</a></li>
-                                    <li><a href="{% page_url "technology" %}" class="hover-style-link">Technology</a></li> <!--- Error -->
+                                    <li><a href="#" class="hover-style-link">Technology</a></li>
                                     {#                                    <li><a href="#" class="hover-style-link">Cyber Security</a></li>#}
+                                    {% endstatic_placeholder %}
                                 </ul>
                             </div>
                             <div class="col-lg-2 col-md-4 col-sm-6 footer-widget">
                                 <h6 class="footer-widget__title mb-20">Quick links</h6>
                                 <ul class="footer-widget__list">
-{#                                    <li><a href="#" class="hover-style-link">Pick up locations</a></li>#}
+                                    {% static_placeholder "footer_links_qlinks" or %}
+{#                                      <li><a href="#" class="hover-style-link">Pick up locations</a></li>#}
                                     <li><a href="#" class="hover-style-link">Terms of Payment</a></li>
-                                    <li><a href="{% page_url "policies" %}" class="hover-style-link">Privacy Policy</a></li>
-                                    <li><a href="/terms/" class="hover-style-link">Terms & Conditions</a></li>
-{#                                    <li><a href="#" class="hover-style-link">Where to Find Us</a></li>#}
+                                    <li><a href="#" class="hover-style-link">Privacy Policy</a></li>
+{#                                      <li><a href="#" class="hover-style-link">Where to Find Us</a></li>#}
+                                    {% endstatic_placeholder %}
                                 </ul>
                             </div>
                             <div class="col-lg-2 col-md-4 col-sm-6 footer-widget">
                                 <h6 class="footer-widget__title mb-20">Support</h6>
                                 <ul class="footer-widget__list">
+                                    {% static_placeholder "footer_links_support" or %}
 {#                                    <li><a href="#" class="hover-style-link">Forum Support</a></li>#}
                                     <li><a href="#" class="hover-style-link">Help & FAQ</a></li>
                                     <li><a href="#" class="hover-style-link">Contact Us</a></li>
 {#                                    <li><a href="#" class="hover-style-link">Pricing and plans</a></li>#}
 {#                                    <li><a href="#" class="hover-style-link">Cookies Policy</a></li>#}
+                                    {% endstatic_placeholder %}
                                 </ul>
                             </div>
                             <div class="col-lg-2 col-md-4 col-sm-6 footer-widget">
                                 <div class="footer-widget__title section-space--mb_50"></div>
                                 <ul class="footer-widget__list">
-                                    <li><a href="#" target="_blank">
-                                        <button class="btn-android"></button>
-                                    </a></li>
-
+                                    <li>
+                                        {% static_placeholder "footer_links_apps" or %}
+                                            <a href="#" target="_blank">
+                                                <button class="btn-android"></button>
+                                            </a>
+                                        {% endstatic_placeholder %}
+                                    </li>
                                 </ul>
                             </div>
                         </div>
@@ -371,6 +391,8 @@
                             <div class="col-md-6 text-center text-md-right">
                                 <ul class="list ht-social-networks solid-rounded-icon">
 
+                                    {% static_placeholder "footer_links_socials" or %}
+
 {#                                    <li class="item">#}
 {#                                        <a href="https://twitter.com/" target="_blank" aria-label="Twitter"#}
 {#                                           class="social-link hint--bounce hint--top hint--primary">#}
@@ -379,7 +401,7 @@
 {#                                    </li>#}
                                     <li class="item">
                                         <a href="https://www.facebook.com/PraniSheba-Shared-Farming-102427835215593/?ti=as" target="_blank" aria-label="Facebook"
-                                           class="social-link hint--bounce hint--top hint--primary">
+                                        class="social-link hint--bounce hint--top hint--primary">
                                             <i class="fab fa-facebook-f link-icon"></i>
                                         </a>
                                     </li>
@@ -391,10 +413,13 @@
 {#                                    </li>#}
                                     <li class="item">
                                         <a href="https://www.linkedin.com/company/adorsho-pranisheba-ltd" target="_blank" aria-label="Linkedin"
-                                           class="social-link hint--bounce hint--top hint--primary">
+                                        class="social-link hint--bounce hint--top hint--primary">
                                             <i class="fab fa-linkedin link-icon"></i>
                                         </a>
                                     </li>
+
+                                    {% endstatic_placeholder %}
+
                                 </ul>
                             </div>
                         </div>
