--- a/aps_shared_farm/templates/base_root.html
+++ b/aps_shared_farm/templates/base_root.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="google-site-verification" content="NgmW8hTvSqymNB-4h3_ZFId1RHzAkU_8Gs6IuZCpPnE"/>
+    <meta name="keywords"
+          content="jouthokhamar, joutho, khamar, farmer, farm, cow, cattle, finance, investor, customer, e-commerce, praniSheba, shared, farming, Livestock, Bangladesh, Shariah Farm, Shariah, Sirajgonj, Sirajgonj Bull farm, Pabna, Bull, Pabna Bull Farm, technology, Adorsho praniSheba, payment">
+
     <title>
         {% block title %}
             {% page_attribute page_title %} - {{ request.site.name }}
@@ -30,20 +34,18 @@
     <link rel="stylesheet" href="{% static 'css/vendor/vendor.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/plugins/plugins.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-{#    <link rel="stylesheet" href="{% static 'css/styles.css' %}">#}
-{#    <link rel="stylesheet" href="{% static 'css/base.css' %}">#}
-{#    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">#}
+    {#    <link rel="stylesheet" href="{% static 'css/styles.css' %}">#}
+    {#    <link rel="stylesheet" href="{% static 'css/base.css' %}">#}
+    {#    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">#}
     <link rel="stylesheet" href="{% static 'css/my-login.css' %}">
-
 
 
     <!-- Main Style CSS -->
 
 
-
-{#    <!-- Latest compiled and minified CSS -->#}
-{#    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"#}
-{#          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">#}
+    {#    <!-- Latest compiled and minified CSS -->#}
+    {#    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"#}
+    {#          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">#}
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
     {% render_block "css" %}
     <link rel="stylesheet" href="{% static 'css/custom_logo.css' %}">
@@ -58,13 +60,13 @@
             {##}
             {#    width: calc(100% - 400px);#}
             {##}
-            {#}#}
+            {
+            #}#}
             .header-area .is-sticky {
 
                 top: 5%;
 
             }
-
 
 
         </style>
@@ -74,49 +76,49 @@
     {{ ALDRYN_SNAKE.render_head }}
 </head>
 <body id="page-top" class="noscript lang-{{ LANGUAGE_CODE }} {% block body_class %}tpl-root{% endblock %}">
-    {% include "includes/analytics.html" %}
-    {% include "core/_modal.html" %}
-    {% cms_toolbar %}
+{% include "includes/analytics.html" %}
+{% include "core/_modal.html" %}
+{% cms_toolbar %}
 
-    {% block extend_root %}{% endblock %}
+{% block extend_root %}{% endblock %}
 
-    {#<script src="{% static 'js/libs/jquery.min.js' %}"></script>#}
-    {#<script src="{% static 'js/libs/bootstrap.min.js' %}"></script>#}
+{#<script src="{% static 'js/libs/jquery.min.js' %}"></script>#}
+{#<script src="{% static 'js/libs/bootstrap.min.js' %}"></script>#}
 
-    <script src="{% static 'js/vendor/modernizr-2.8.3.min.js' %}"></script>
-    <script src="{% static 'js/vendor/jquery-3.5.1.min.js' %}"></script>
-    <script src="{% static 'js/vendor/popper.min.js' %}"></script>
-    <script src="{% static 'js/vendor/jquery-migrate-3.3.0.min.js' %}"></script>
-    <script src="{% static 'js/vendor/bootstrap.min.js' %}"></script>
+<script src="{% static 'js/vendor/modernizr-2.8.3.min.js' %}"></script>
+<script src="{% static 'js/vendor/jquery-3.5.1.min.js' %}"></script>
+<script src="{% static 'js/vendor/popper.min.js' %}"></script>
+<script src="{% static 'js/vendor/jquery-migrate-3.3.0.min.js' %}"></script>
+<script src="{% static 'js/vendor/bootstrap.min.js' %}"></script>
 
-    <script src="{% static 'js/libs/class.min.js' %}"></script>
-    <script src="{% static 'js/libs/outdatedBrowser.min.js' %}"></script>
-    <script src="{% static 'js/addons/cl.utils.js' %}"></script>
-    {#<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>#}
-    <script src="{% static 'js/scripts.js' %}"></script>
-    {#<script src="{% static 'js/base.js' %}"></script>#}
-    <script src="{% static 'js/jquery.bootstrap.modal.forms.min.js' %}"></script>
+<script src="{% static 'js/libs/class.min.js' %}"></script>
+<script src="{% static 'js/libs/outdatedBrowser.min.js' %}"></script>
+<script src="{% static 'js/addons/cl.utils.js' %}"></script>
+{#<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>#}
+<script src="{% static 'js/scripts.js' %}"></script>
+{#<script src="{% static 'js/base.js' %}"></script>#}
+<script src="{% static 'js/jquery.bootstrap.modal.forms.min.js' %}"></script>
 
-    <script src="https://cdn.lordicon.com/libs/mssddfmo/lord-icon-2.1.0.js"></script>
-    <script src="{% static 'js/plugins/plugins.min.js' %}"></script>
-    {#<script src="{% static 'js/my-login.js' %}"></script>#}
-    <script src="{% static 'js/main.js' %}"></script>
+<script src="https://cdn.lordicon.com/libs/mssddfmo/lord-icon-2.1.0.js"></script>
+<script src="{% static 'js/plugins/plugins.min.js' %}"></script>
+{#<script src="{% static 'js/my-login.js' %}"></script>#}
+<script src="{% static 'js/main.js' %}"></script>
 
-    {% render_block "js" %}
-    {% block extrafoot %}{% endblock %}
-    {{ ALDRYN_SNAKE.render_tail }}
-    <div class="browser-outdated" id="outdated" hidden="hidden">
-        <noscript><h3>{% trans "Please enable JavaScript" %}</h3></noscript>
-        <h3>{% trans "Your browser is out-of-date!" %}</h3>
-        <p>{% trans "Update your browser to view this website correctly." %}</p>
-        <p>
-            <a href="http://outdatedbrowser.com/" class="btn btn-lg btn-outline" id="btnUpdateBrowser">
-                {% trans "Update my browser now" %}
-            </a>
-        </p>
-        <p class="last"><a href="#" id="btnCloseUpdateBrowser" title="Close">&times;</a></p>
-    </div>
+{% render_block "js" %}
+{% block extrafoot %}{% endblock %}
+{{ ALDRYN_SNAKE.render_tail }}
+<div class="browser-outdated" id="outdated" hidden="hidden">
+    <noscript><h3>{% trans "Please enable JavaScript" %}</h3></noscript>
+    <h3>{% trans "Your browser is out-of-date!" %}</h3>
+    <p>{% trans "Update your browser to view this website correctly." %}</p>
+    <p>
+        <a href="http://outdatedbrowser.com/" class="btn btn-lg btn-outline" id="btnUpdateBrowser">
+            {% trans "Update my browser now" %}
+        </a>
+    </p>
+    <p class="last"><a href="#" id="btnCloseUpdateBrowser" title="Close">&times;</a></p>
+</div>
 
-    {% block extrascripts %}{% endblock extrascripts %}
+{% block extrascripts %}{% endblock extrascripts %}
 </body>
 </html>
