--- a/sharedfarm/templates/sharedfarm/base.html
+++ b/sharedfarm/templates/sharedfarm/base.html
@@ -15,19 +15,12 @@
     {% endif %}
 {% endblock meta %}
 
-{% block content %}
+<div id='farms'>
 
-{#    <div class="modal" tabindex="-1" role="dialog" id="modal">#}
-{#        <div class="modal-dialog" role="document">#}
-{#            <div class="modal-content">#}
-{##}
-{#            </div>#}
-{##}
-{#        </div>#}
-{#    </div>#}
-{#    <div class="site-wrapper-reveal section-space--pt__120">#}
+    {% block content %}
+
         {% block sharedfarm_content %}{% endblock %}
 
-{#    </div>#}
-{% endblock content %}
+    {% endblock content %}
 
+</div>
