--- a/sharedfarm/templates/sharedfarm/index.html
+++ b/sharedfarm/templates/sharedfarm/index.html
@@ -268,7 +268,7 @@
 
 
 <!--===========  Projects wrapper Start =============-->
-<div class="projects-wrapper section-space--ptb_30 projects-masonary-wrapper">
+<div class="projects-wrapper section-space--ptb_30 projects-masonary-wrapper" id = 'farms'>
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
@@ -410,8 +410,9 @@
                                             <li class="text-black">
                                                 <i class="bi bi-shield-check"></i>
                                                 {{ products.duration }} months contract period with
-                                                {{ products.shariah_profit_from }}%
-                                                to {{ products.shariah_profit_to }}%
+                                                {% comment %} {{ products.shariah_profit_from }}%
+                                                to  {% endcomment %}
+                                                {{ products.shariah_profit_to }}%
                                                 Profit Sharing
                                             </li>
                                         </ul>
